movim-massacritica/movim/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movim
  namespace: movim-massacritica
  labels:
    app: movim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movim
  template:
    metadata:
      labels:
        app: movim
    spec:
      containers:
        - name: movim
          image: movim/movim:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: movim-data
              mountPath: /var/www/html
          resources:
            requests:  # Minimum guaranteed resources
              memory: "10Mi"
              cpu: "10m"
            limits:  # Maximum allowed resources
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: movim-data
          persistentVolumeClaim:
            claimName: movim-massacritica-pvc
