movim-massacritica/movim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movim
  namespace: movim-massacritica
spec:
  selector:
    app: movim
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
